// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`partition_info.sql > line 4 1`] = `
[
  "SELECT * FROM pg_partition_tree(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "isnull": true,
                                    "location": 32,
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_partition_tree",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 12 1`] = `
[
  "CREATE TABLE ptif_test (a int, b int) PARTITION BY range (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 38,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 58,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ptif_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 22 1`] = `
[
  "CREATE TABLE ptif_test3 PARTITION OF ptif_test
  FOR VALUES FROM (200) TO (maxvalue) PARTITION BY list (b)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 37,
                  "relname": "ptif_test",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "partbound": {
              "location": 60,
              "lowerdatums": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 200,
                    },
                    "location": 66,
                  },
                },
              ],
              "strategy": "r",
              "upperdatums": [
                {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "maxvalue",
                        },
                      },
                    ],
                    "location": 75,
                  },
                },
              ],
            },
            "partspec": {
              "location": 85,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 104,
                    "name": "b",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ptif_test3",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 26 1`] = `
[
  "SELECT pg_partition_root('ptif_test')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "ptif_test",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_partition_root",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 32 1`] = `
[
  "CREATE INDEX ptif_test_index ON ONLY ptif_test (a)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "ptif_test_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "a",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "location": 37,
              "relname": "ptif_test",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 53 1`] = `
[
  "SELECT relid, parentrelid, level, isleaf
  FROM pg_partition_tree('ptif_test')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "location": 66,
                                    "sval": {
                                      "sval": "ptif_test",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_partition_tree",
                                  },
                                },
                              ],
                              "location": 48,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "parentrelid",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 27,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "level",
                          },
                        },
                      ],
                      "location": 27,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "isleaf",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 56 1`] = `
[
  "SELECT relid, parentrelid, level, isleaf
  FROM pg_partition_tree('ptif_test0') p
  JOIN pg_class c ON (p.relid = c.oid)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "p",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "location": 66,
                                        "sval": {
                                          "sval": "ptif_test0",
                                        },
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "pg_partition_tree",
                                      },
                                    },
                                  ],
                                  "location": 48,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p",
                              },
                            },
                            {
                              "String": {
                                "sval": "relid",
                              },
                            },
                          ],
                          "location": 104,
                        },
                      },
                      "location": 112,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 114,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "c",
                      },
                      "inh": true,
                      "location": 89,
                      "relname": "pg_class",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "parentrelid",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 27,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "level",
                          },
                        },
                      ],
                      "location": 27,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "isleaf",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 68 1`] = `
[
  "SELECT * FROM pg_partition_ancestors('ptif_test01')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeFunction": {
                  "functions": [
                    {
                      "List": {
                        "items": [
                          {
                            "FuncCall": {
                              "args": [
                                {
                                  "A_Const": {
                                    "location": 37,
                                    "sval": {
                                      "sval": "ptif_test01",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_partition_ancestors",
                                  },
                                },
                              ],
                              "location": 14,
                            },
                          },
                          {},
                        ],
                      },
                    },
                  ],
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 71 1`] = `
[
  "SELECT relid, parentrelid, level, isleaf
  FROM pg_partition_tree(pg_partition_root('ptif_test01')) p
  JOIN pg_class c ON (p.relid = c.oid)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "JoinExpr": {
                  "jointype": "JOIN_INNER",
                  "larg": {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "p",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "FuncCall": {
                                        "args": [
                                          {
                                            "A_Const": {
                                              "location": 84,
                                              "sval": {
                                                "sval": "ptif_test01",
                                              },
                                            },
                                          },
                                        ],
                                        "funcformat": "COERCE_EXPLICIT_CALL",
                                        "funcname": [
                                          {
                                            "String": {
                                              "sval": "pg_partition_root",
                                            },
                                          },
                                        ],
                                        "location": 66,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "pg_partition_tree",
                                      },
                                    },
                                  ],
                                  "location": 48,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                  "quals": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "p",
                              },
                            },
                            {
                              "String": {
                                "sval": "relid",
                              },
                            },
                          ],
                          "location": 124,
                        },
                      },
                      "location": 132,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                            {
                              "String": {
                                "sval": "oid",
                              },
                            },
                          ],
                          "location": 134,
                        },
                      },
                    },
                  },
                  "rarg": {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "c",
                      },
                      "inh": true,
                      "location": 109,
                      "relname": "pg_class",
                      "relpersistence": "p",
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "relid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "parentrelid",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 27,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "level",
                          },
                        },
                      ],
                      "location": 27,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "isleaf",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 98 1`] = `
[
  "DROP TABLE ptif_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "ptif_test",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 101 1`] = `
[
  "CREATE TABLE ptif_normal_table(a int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ptif_normal_table",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`partition_info.sql > line 111 1`] = `
[
  "CREATE VIEW ptif_test_view AS SELECT 1",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 37,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 37,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "ptif_test_view",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
